primo-explore/custom/01USNH_UNH-MAIN/css/custom1.css
/* ... */
@media (min-width: 1280px) and (max-width: 1919px) {
  .flex-lg-10, .layout-row > .flex-lg-10 {
    -webkit-box-flex: 1;
    -ms-flex: 1 1 100%;
    flex: 1 1 100%;
    max-width: 20%;
    max-height: 100%;
    -webkit-box-sizing: border-box;
    box-sizing: border-box; } }

/* positions libchat widget lower on page; visible on mobile screens both orientations */
.lcs_slide_out-r {
  top: 50% !important; }

/* moves widget higher when clicked so the bottom is visible on mobile screens both orientations */
.lcs_slide_out-r.open {
  top: 40% !important; }

/* LOCAL BANNER */
body::before {
  content: "Because we have increased online access, some physical books and journals may not circulate out of the library. Individual title status is indicated in the catalog.";
  display: inline-block;
  background: #ecd90f;
  text-align: center;
  width: 100%;
  font-weight: bold; }

div#mainMenu {
  margin-left: 40%; }

@media (min-width: 1280px) and (max-width: 1919px) {
  .flex-lg-25, .layout-row > .flex-lg-25 {
    -webkit-box-flex: 1;
    -ms-flex: 1 1 100%;
    flex: 1 1 100%;
    max-width: 15%;
    max-height: 100%;
    -webkit-box-sizing: border-box;
    box-sizing: border-box; } }

/*
  The reason these are such specific pixels is that they were chosen
  to space correctly around the existing search bar
  Of course if the size of the existing search bar is different of if ExL
  changes it these base values will be meaningless
*/
prm-search-bar {
  padding-bottom: 58.5px; }

.__sm prm-search-bar {
  padding-bottom: 49.5px; }

.__xs prm-search-bar {
  padding-bottom: 36px; }

search-bar-sub-menu ul {
  margin: 0;
  padding: 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: scroll; }

search-bar-sub-menu ul li {
  display: inline;
  list-style: none;
  padding: 0; }

search-bar-sub-menu div.layout-align-end-center.layout-row.flex.search-bar-sub-menu {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #dcdedf;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 36px; }

search-bar-sub-menu .md-button.md-small {
  font-size: 0.75em;
  min-width: 42px;
  font-weight: bold; }

